@@ -31,6 +31,8 @@ AC_CHECK_HEADERS(sys/param.h sys/mount.h,,,
   ]
 ])
 
+AC_PATH_PROG(cstream, cstream)
+
 # /etc/rdup
 if test $prefix = "NONE"; then
 	if test $sysconfdir = '${prefix}/etc'; then
