@@ -5,6 +5,7 @@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+cstream=@cstream@
 
 usage() {
         echo "$PROGNAME [OPTIONS] [+DAY] -t TO_DIR FROM_DIR [FROM_DIR ...]"
@@ -18,7 +19,8 @@ usage() {
         echo OPTIONS:
         echo " -k KEYFILE encrypt all files"
         echo " -c REMOTE  dump the backup on a remote machine with ssh"
-        echo " -p num     strip \`num' leading components from file names"
+        echo " -p NUM     strip \`num' leading components from file names"
+        echo " -t NUM     limit transfer to NUM bytes/second. See cstream(1)."
         echo " -z         compress all files"
         echo " -v         echo the files processed to stderr"
         echo " -h         this help"
@@ -38,6 +40,7 @@ to_dir=""
 verbose=""
 dirstrip=""
 remote=""
+bwidth=""
 
 _echo2() {
         echo "** $PROGNAME: $1" > /dev/fd/2
@@ -48,6 +51,7 @@ while getopts ":k:t:p:zhVv" o; do
                 k) KEYFILE=$OPTARG;;
                 t) to_dir=$OPTARG;;
                 c) remote=$OPTARG;;
+                t) bwidth=$OPTARG;;
                 z) gzip=1;;
                 p) dirstrip=$OPTARG;;
                 v) verbose="-v";;
