@@ -5,6 +5,7 @@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+cstream=@cstream@
 
 usage() {
         echo "$PROGNAME [OPTIONS] NAME DIR [DIR ...]"
@@ -17,6 +18,7 @@ usage() {
         echo OPTIONS:
         echo " -b DIR     backup directory. Default: /vol/backup/HOSTNAME"
         echo " -c REMOTE  dump the backup on a remote machine with ssh"
+        echo " -t NUM     limit transfer to NUM bytes/second. See cstream(1)."
         echo " -e         filelist and timestamp are put in backup directory"
         echo " -z         compress all files"
         echo " -k KEYFILE encrypt all files"
@@ -37,6 +39,7 @@ gzip=0
 verbose=""
 KEYFILE=""
 remote=""
+bwidth=""
 
 _echo2() {
         echo "** $PROGNAME: $1" > /dev/fd/2
@@ -47,6 +50,7 @@ while getopts ":b:k:vzehV" o; do
                 b) BACKUPDIR=$OPTARG;;
                 k) KEYFILE=$OPTARG;;
                 c) remote=$OPTARG;;
+                t) bwidth=$OPTARG;;
                 e) etc=1;;
                 z) gzip=1;;
                 v) verbose="-v";;
